--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,10 +17,10 @@ website:
   page-footer:
     right: "This page is built with [Quarto](https://quarto.org/). 👷🛠️"
     left: "&copy; Copyright 2023, [Emmanuel Teitelbaum](https://emmanuel.teitelbaum.com)"
-    background: "#A4DBF5"
+    background: "#227dd5"
 
   sidebar:
-    background: "#A4DBF5"
+    background: "#227dd5"
     logo: "images/logo-placeholder.png"
     pinned: true
     align: center
@@ -31,9 +31,9 @@ website:
       - icon: github
         href: https://classroom.github.com
         text: "Github Classroom"
-      - icon: r-circle-fill
+      - icon: bootstrap-reboot
         href: https://posit.co/download/rstudio-desktop
-        text: "R Studio Desktop"
+        text: "RStudio Desktop"
 
     style: "docked"
     search: true
@@ -43,6 +43,8 @@ website:
         contents:
           - href: course-description.qmd
             text: Description
+          - href: course-overview.qmd
+            text: Overview
           - href: course-syllabus.qmd
             text: Syllabus
           - href: course-support.qmd
@@ -57,8 +59,8 @@ website:
             text: FAQ
       - section: "Project"
         contents:
-          - href: project-description.qmd
-            text: Description
+          - href: project/project-description.qmd
+            text: "Description"
           - href: project/project-assignment-1.qmd
             text: "Assignment 1"
           - href: project/project-assignment-2.qmd
@@ -67,8 +69,10 @@ website:
             text: "Assignment 3"
           - href: project/project-datasets.qmd
             text: Datasets
-      - section: "Weekly materials"
+      - section: "Course Modules"
         contents:
+          - href: modules/getting-started.qmd
+            text: "Getting Started" 
           - href: modules/module-1.1.qmd
             text: "Module 1.1"
           - href: modules/module-1.2.qmd
@@ -79,7 +83,7 @@ website:
             text: "Module 2.2"
           - href: modules/module-3.1.qmd
             text: "Module 3.1"
-          - href: modules/modules-3.2.qmd
+          - href: modules/module-3.2.qmd
             text: "Module 3.2"
           - href: modules/module-4.1.qmd
             text: "Module 4.1"
