trying to speed up webr in module 2.1

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[headers]]
-  for = "/directory/with/webr/content/*"
+  for = "/modules"
 
   [headers.values]
     Cross-Origin-Opener-Policy = "same-origin"
