--- a/_quarto.yml
+++ b/_quarto.yml
@@ -51,16 +51,42 @@ website:
             text: Useful links
           - href: faq.qmd
             text: FAQ
+      - section: "Weekly Materials"
+        contents: 
+          - href: weeks/week-1.qmd
+            text: "Week 1"
+          - href: weeks/week-2.qmd
+            text: "Week 2"
+          - href: weeks/week-3.qmd
+            text: "Week 3"
+          - href: weeks/week-4.qmd
+            text: "Week 4"
+          - href: weeks/week-5.qmd
+            text: "Week 5"
+          - href: weeks/week-6.qmd
+            text: "Week 6"
+      - section: "Coding Assignments"
+        contents:
+          - href: assignments/coding-assignment-1.qmd
+            text: "Coding Assignment 1"
+          - href: assignments/coding-assignment-2.qmd
+            text: "Coding Assignment 2"
+          - href: assignments/coding-assignment-3.qmd
+            text: "Coding Assignment 3"
+          - href: assignments/coding-assignment-4.qmd
+            text: "Coding Assignment 4"
+          - href: assignments/coding-assignment-5.qmd
+            text: "Coding Assignment 5"
       - section: "Project"
         contents:
           - href: project/project-description.qmd
             text: "Description"
           - href: project/project-assignment-1.qmd
-            text: "Assignment 1"
+            text: "Project Assignment 1"
           - href: project/project-assignment-2.qmd
-            text: "Assignment 2"
+            text: "Project Assignment 2"
           - href: project/project-assignment-3.qmd
-            text: "Assignment 3"
+            text: "Project Assignment 3"
           - href: project/project-datasets.qmd
             text: Datasets
       - section: "Course Modules"
