--- a/_quarto.yml
+++ b/_quarto.yml
@@ -132,6 +132,6 @@ format:
     code-overflow: wrap
     toc: true
     link-external-newwindow: true
-freeze: auto
+freeze: false
 editor: source
 
