--- a/_quarto.yml
+++ b/_quarto.yml
@@ -84,8 +84,8 @@ website:
             text: "Module 1.4"
           - href: modules/module-1.5.qmd
             text: "Module 1.5"
-          # - href: modules/module-2.1.qmd
-          #   text: "Module 2.1"
+          - href: modules/module-2.1.qmd
+            text: "Module 2.1"
           # - href: modules/module-2.2.qmd
           #   text: "Module 2.2"
           # - href: modules/module-2.3.qmd
